# chuk-mcp-ui

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  architecture.md  component-spec.md  design-system.md  fly.toml  package.json  pnpm-lock.yaml  roadmap.md  server.mjs  tsconfig.base.json  turbo.json
.claude/plans/: rosy-finding-waterfall.md
.github/workflows/: ci.yml
.storybook/: main.ts  mock-call-tool.ts  preview.ts  test-runner.ts  theme-decorator.tsx
apps/alert/: COMPONENT.md  mcp-app.html  package.json
apps/annotation/: COMPONENT.md  mcp-app.html  package.json
apps/audio/: COMPONENT.md  mcp-app.html  package.json
apps/boxplot/: COMPONENT.md  mcp-app.html  package.json
apps/calendar/: COMPONENT.md  mcp-app.html  package.json
apps/carousel/: COMPONENT.md  mcp-app.html  package.json
apps/chart/: COMPONENT.md  mcp-app.html  package.json  vite.config.ssr.ts
apps/chat/: COMPONENT.md  mcp-app.html  package.json
apps/code/: COMPONENT.md  mcp-app.html  package.json
apps/compare/: COMPONENT.md  mcp-app.html  package.json
chuk-view-schemas/: .coverage  Makefile  README.md  pyproject.toml
chuk-view-schemas/chuk_view_schemas/: __init__.py  alert.py  annotation.py  audio.py  boxplot.py  calendar_view.py  carousel.py  chart.py  chat.py  chuk_mcp.py  code.py  compare.py  confirm.py  counter.py  crosstab.py  dashboard.py  datatable.py  detail.py  diff.py  embed.py  fastmcp.py  filter.py  flowchart.py  font.py  form.py  funnel.py  gallery.py  gantt.py  gauge.py  geostory.py  gis_legend.py  globe.py  graph.py  heatmap.py  image.py  infer.py  investigation.py  json_view.py  kanban.py  layers.py  (+31 more)
chuk-view-schemas/chuk_view_schemas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chuk-view-schemas/tests/: test_chuk_mcp.py  test_fastmcp.py  test_infer.py  test_interaction_schemas.py
docs/: compat-matrix.json  compat-matrix.md
(+941 files in other folders)
