[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-view-schemas"
version = "0.1.0"
description = "Pydantic v2 schemas for chuk-mcp-ui Views"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["chuk_view_schemas*"]
